deals section deleted from catalog page and added to car page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -68,8 +68,9 @@ button {
 
 .all-title {
     font-size: calc(20px + 10 * (100vw / 1920));
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
+    text-align: center;
 }
 
 @media (min-width: 1920px) {
