price filter added

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -115,3 +115,14 @@ button {
         background: var(--main-black);
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
